[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "korean-geocoder"
version = "0.1.0"
description = "A Python library for geocoding Korean addresses using a RESTful API."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/korean-geocoder"
repository = "https://github.com/yourusername/korean-geocoder"
keywords = ["geocoding", "korean", "addresses", "api", "pandas"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
httpx = "^0.19.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-cov = "^2.12.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[build]
source = ["gimi9_geocoder"]