[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gimi9-geocoder"
version = "0.1.0"
description = "A Python library for geocoding Korean addresses using a RESTful API."
authors = [{name = "gisman", email = "gisman@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
keywords = ["geocoding", "korean", "addresses", "api", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/gisman/gimi9_geocoder"
Repository = "https://github.com/gisman/gimi9_geocoder"

[tool.setuptools.packages.find]
where = ["."]
include = ["gimi9_geocoder*"]